--- a/index.html
+++ b/index.html
@@ -2720,6 +2720,102 @@
         </div>
       </div>
     </div>
+    <div class="shopify-section">
+      <div>
+        <img src="./asset/images/bg-dt.webp" alt="" class="Desktop_only_new" />
+        <img src="./asset/images/bgmb.webp" alt="" class="mobile_image_new" />
+      </div>
+    </div>
+    <div class="shopify-section">
+      <div
+        class="bg-[f5eaea] pt-[104px] pb-[46px] relative max-[749px]:pt-[56px]"
+      >
+        <div
+          class="page-width max-[749px]:px-[20px] min-[750px]:px-[50px] max-w-[1500px] mx-auto"
+        >
+          <div>
+            <h2
+              class="text-[52px] leading-[1.2] mb-[20px] text-center w-full text-[#50000b] font-[300]"
+            >
+              How to Enjoy
+            </h2>
+          </div>
+          <div
+            class="flex gap-x-4 pt-[56px] max-[749px]:block max-[749px]:pt-8"
+          >
+            <div
+              class="w-[calc(33.33%-0px)] pb-[18px] max-[749px]:w-full max-[749px]:pt-8"
+            >
+              <video
+                class="w-full h-full object-cover rounded-[16px]"
+                autoplay
+                muted
+                loop
+                playsinline
+              >
+                <source
+                  src="//im8health.com/cdn/shop/videos/c/vp/ce78e2bd331f47f79ac745c7ae51f01f/ce78e2bd331f47f79ac745c7ae51f01f.SD-480p-1.2Mbps-37195721.mp4?v=0"
+                  type="video/mp4"
+                />
+              </video>
+              <div class="pt-4">
+                <p
+                  class="metafield-rich_text_field flex text-[#50000b] text-[24px] font-medium leading-[108%] tracking-[-0.48px] max-[749px]:text-[20px] max-[749px]:leading-[120%] max-[749px]:tracking-[-0.4px]"
+                >
+                  Step 1: Scoop out one serving of Daily Ultimate Essentials
+                </p>
+              </div>
+            </div>
+            <div
+              class="w-[calc(33.33%-0px)] pb-[18px] max-[749px]:w-full max-[749px]:pt-8"
+            >
+              <video
+                class="w-full h-full object-cover rounded-[16px]"
+                autoplay
+                muted
+                loop
+                playsinline
+              >
+                <source
+                  src="//im8health.com/cdn/shop/videos/c/vp/c204aec03aad4763993ff1eda15f0501/c204aec03aad4763993ff1eda15f0501.SD-480p-1.2Mbps-37195734.mp4?v=0"
+                  type="video/mp4"
+                />
+              </video>
+              <div class="pt-4">
+                <p
+                  class="metafield-rich_text_field flex text-[#50000b] text-[24px] font-medium leading-[108%] tracking-[-0.48px] max-[749px]:text-[20px] max-[749px]:leading-[120%] max-[749px]:tracking-[-0.4px]"
+                >
+                  Step 2: Add 8 to 12oz of Water or Your Favorite Smoothie
+                </p>
+              </div>
+            </div>
+            <div
+              class="w-[calc(33.33%-0px)] pb-[18px] max-[749px]:w-full max-[749px]:pt-8"
+            >
+              <video
+                class="w-full h-full object-cover rounded-[16px]"
+                autoplay
+                muted
+                loop
+                playsinline
+              >
+                <source
+                  src="//im8health.com/cdn/shop/videos/c/vp/ce78e2bd331f47f79ac745c7ae51f01f/ce78e2bd331f47f79ac745c7ae51f01f.SD-480p-1.2Mbps-37195721.mp4?v=0"
+                  type="video/mp4"
+                />
+              </video>
+              <div class="pt-4">
+                <p
+                  class="metafield-rich_text_field flex text-[#50000b] text-[24px] font-medium leading-[108%] tracking-[-0.48px] max-[749px]:text-[20px] max-[749px]:leading-[120%] max-[749px]:tracking-[-0.4px]"
+                >
+                  Step 3: Stir Well and Enjoy Daily
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <script src="./asset/js/js.js"></script>
     <script src="./asset/js/slideder.js"></script>
   </body>
