--- a/index.html
+++ b/index.html
@@ -2816,6 +2816,170 @@
         </div>
       </div>
     </div>
+    <div class="shopify-section">
+      <div class="pt-[30px] bg-st">
+        <div
+          class="flex flex-row py-10 max-w-[1400px] mx-auto w-full max-[749px]:flex-col max-[749px]:p-5"
+        >
+          <div class="w-1/2 px-5 max-[749px]:w-full">
+            <div class="Common_title_new pb-[30px]">
+              <h2
+                class="text-[40px] uppercase font-normal tracking-normal text-[#50000B] max-[749px]:text-[28px] max-[749px]:tracking-[-0.64px]"
+              >
+                Get Started with IM8 for Daily Ultimate Nutrition
+              </h2>
+            </div>
+            <div
+              class="min-[750px]:hidden w-full object-cover h-full !object-center"
+            >
+              <img src="./asset/images/welcome-kit-sach.webp" alt="" />
+            </div>
+            <div
+              class="landing-page-welcome-kit__row flex flex-row justify-between content-start mb-[5px]"
+            >
+              <div
+                class="table-item__main-title max-[768px]:w-[60%] max-[768px]:font-bold text-[18px] font-[700] text-[#50000B] w-[70%]"
+              >
+                Daily Ultimate Essentials
+              </div>
+              <div
+                class="table-item__price text-[18px] font-[700] text-[#50000B] w-[90px] text-right"
+              >
+                $89
+              </div>
+            </div>
+            <div class="w-full !h-[0.5px] bg-[#160505] my-[10px]"></div>
+            <div
+              class="landing-page-welcome-kit__row flex flex-row justify-between content-start mb-[5px]"
+            >
+              <div
+                class="table-item__first-time text-[12px] font-[700] text-[#7e7e7e]"
+              >
+                FIRST TIME PURCHASE:
+              </div>
+            </div>
+            <div
+              class="landing-page-welcome-kit__row flex flex-row justify-between content-start mb-[5px]"
+            >
+              <div
+                class="table-item__main-title max-[768px]:w-[60%] max-[768px]:font-bold text-[18px] font-medium text-[#50000b] w-[65%] py-[5px] leading-[1.3]"
+              >
+                Signature Red Cup
+              </div>
+              <div
+                class="table-item__price-block max-[768px]:gap-[10px] max-[768px]:w-[75%] flex flex-row gap-[10px] justify-end py-[5px] pl-[5px] ml-[10px]"
+              >
+                <div
+                  class="table-item__price--cut padded-right text-[16px] font-medium text-[#7e7e7e] text-right"
+                >
+                  <s>$28</s>
+                </div>
+                <div
+                  class="table-item__price text-[18px] font-bold text-[#50000b] text-right w-[90px]"
+                >
+                  Free
+                </div>
+              </div>
+            </div>
+            <div
+              class="landing-page-welcome-kit__row flex flex-row justify-between content-start mb-[5px]"
+            >
+              <div
+                class="table-item__main-title max-[768px]:w-[60%] max-[768px]:font-bold text-[18px] font-medium text-[#50000b] w-[65%] py-[5px] leading-[1.3]"
+              >
+                Daily Ultimate Essentials Single-Serve Storage Box
+              </div>
+              <div
+                class="table-item__price-block max-[768px]:gap-[10px] max-[768px]:w-[75%] flex flex-row gap-[10px] justify-end py-[5px] pl-[5px] ml-[10px]"
+              >
+                <div
+                  class="table-item__price--cut padded-right text-[16px] font-medium text-[#7e7e7e] text-right"
+                >
+                  <s>$8</s>
+                </div>
+                <div
+                  class="table-item__price text-[18px] font-bold text-[#50000b] text-right w-[90px]"
+                >
+                  Free
+                </div>
+              </div>
+            </div>
+            <div
+              class="landing-page-welcome-kit__row flex flex-row justify-between content-start mb-[5px]"
+            >
+              <div
+                class="table-item__main-title max-[768px]:w-[60%] max-[768px]:font-bold text-[18px] font-medium text-[#50000b] w-[65%] py-[5px] leading-[1.3]"
+              >
+                5x Bonus Daily Ultimate Essentials Single-Serve Sachets
+              </div>
+              <div
+                class="table-item__price-block max-[768px]:gap-[10px] max-[768px]:w-[75%] flex flex-row gap-[10px] justify-end py-[5px] pl-[5px] ml-[10px]"
+              >
+                <div
+                  class="table-item__price--cut padded-right text-[16px] font-medium text-[#7e7e7e] text-right"
+                >
+                  <s>$18</s>
+                </div>
+                <div
+                  class="table-item__price text-[18px] font-bold text-[#50000b] text-right w-[90px]"
+                >
+                  Free
+                </div>
+              </div>
+            </div>
+            <div class="w-full !h-[0.5px] bg-[#160505] my-[10px]"></div>
+            <div
+              class="landing-page-welcome-kit__row flex flex-row justify-between content-start mb-[5px]"
+            >
+              <div
+                class="table-item__total-title text-[18px] font-[700] text-[#50000B] w-[65%]"
+              >
+                Total
+              </div>
+              <div
+                class="table-item__price-block max-[768px]:gap-[10px] max-[768px]:w-[75%] wide-block flex flex-row gap-[10px] justify-end py-[5px] pl-[5px] ml-[10px]"
+              >
+                <div
+                  class="table-item__price--cut text-[16px] font-medium text-[#7e7e7e] text-right"
+                >
+                  Save $54
+                </div>
+                <div
+                  class="table-item__price text-[18px] font-bold text-[#50000b] text-right w-[90px]"
+                >
+                  $89
+                </div>
+              </div>
+            </div>
+            <div
+              class="w-full mt-[30px] mb-[10px] min-w-[272px] text-center text-white text-[16px] font-bold leading-[22px] tracking-[0.32px] uppercase rounded-full bg-[rgb(164,0,17)] px-[17px] py-[13px]"
+            >
+              <span>Get your Free IM8 Welcome Kit Now**</span>
+            </div>
+            <div
+              class="flex items-center justify-center my-[26px] max-[768px]:flex-col max-[768px]:items-center max-[768px]:mb-0"
+            >
+              <div class="mr-[10px] flex items-center gap-[10px]">
+                <img src="./asset/images/tickr-2.svg" alt="" />
+                <span> <strong>30-Day</strong> money back guarantee</span>
+              </div>
+              <div class="flex items-center gap-[10px]">
+                <img src="./asset/images/tickr-2.svg" alt="" />
+                <span>
+                  <strong>Update </strong> or
+                  <strong>cancel</strong> anytime</span
+                >
+              </div>
+            </div>
+          </div>
+          <div
+            class="flex w-1/2 object-cover h-full !object-center self-center justify-center max-[749px]:hidden"
+          >
+            <img src="./asset/images/welcome-kit-sach.webp" alt="" />
+          </div>
+        </div>
+      </div>
+    </div>
     <script src="./asset/js/js.js"></script>
     <script src="./asset/js/slideder.js"></script>
   </body>
