--- a/index.html
+++ b/index.html
@@ -4167,6 +4167,257 @@
         </div>
       </div>
     </div>
+    <div class="shopify-section">
+      <div class="pt-[104px] pb-[40px]">
+        <div
+          class="page-width max-w-[1500px] mx-auto min-[750px]:px-[50px] relative max-[749px]:px-5"
+        >
+          <div>
+            <div class="flex justify-between gap-10">
+              <h2
+                class="text-[#50000b] text-3xl text-[52px] font-[500] leading-[110%] tracking-[-1px] m-0 text-center max-[749px]:text-[28px] max-[749px]:font-[400] tracking-[-0.8px]"
+              >
+                Premium Core Nutrition
+              </h2>
+            </div>
+            <div
+              class="flex text-[#50000b] text-[16px] font-normal leading-[1.25]"
+            >
+              <div
+                class="flex items-center justify-center my-[16px] max-[768px]:flex-col max-[768px]:items-center max-[768px]:mb-0 max-[749px]:items-start max-[749px]:gap-[6px]"
+              >
+                <div
+                  class="mr-[10px] flex items-center gap-[10px] max-[749px]:text-[15px] max-[749px]:leading-[1.35] max-[749px]:mb-2"
+                >
+                  <img src="./asset/images/tickr-2.svg" alt="" />
+                  <span> <strong>30-Day</strong> money back guarantee</span>
+                </div>
+                <div
+                  class="flex items-center gap-[10px] mr-[10px] max-[749px]:text-[15px] max-[749px]:leading-[1.35] max-[749px]:mb-2"
+                >
+                  <img src="./asset/images/tickr-2.svg" alt="" />
+                  <span>
+                    <strong>Update </strong> or
+                    <strong>cancel</strong> anytime</span
+                  >
+                </div>
+                <div
+                  class="flex items-center gap-[10px] max-[749px]:text-[15px] max-[749px]:leading-[1.35] max-[749px]:mb-2"
+                >
+                  <img src="./asset/images/tickr-2.svg" alt="" />
+                  <span>
+                    <strong>Free shipping</strong> for all subscriptions</span
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="pt-10">
+            <div
+              class="relative w-full h-full z-[1] flex box-content transition-transform transform-gpu translate-x-0 translate-y-0 gap-4 flex-wrap"
+            >
+              <div
+                class="w-[calc((100%/3)-16px)] product-hov cursor-pointer min-[750px]:max-[989px]:w-[calc((100%/2)-16px)] max-[749px]:w-full"
+              >
+                <div class="text-inherit h-full relative no-underline">
+                  <div class="">
+                    <div class="relative overflow-hidden rounded-[16px]">
+                      <img
+                        src="./asset/images/pr1.webp"
+                        alt=""
+                        class="main-img h-full"
+                      />
+                      <img
+                        src="./asset/images/DB.webp"
+                        alt=""
+                        class="img-hover"
+                      />
+
+                      <button
+                        class="btn-cart max-[749px]:hidden min-w-auto rounded-[100px] bg-[#fffc] border text-[13px] py-[11px] px-[24px] border-[#50000B] backdrop-blur-[4px] text-[#50000b] font-bold uppercase tracking-[0.32px] leading-[1.4] shadow-[0_8px_24px_#50000b33,_0_2px_8px_#0000001a]"
+                      >
+                        <span>ADD TO CART</span>
+                      </button>
+                    </div>
+                  </div>
+                  <div
+                    class="product-icon flex items-center justify-center text-center w-16 h-16 text-white text-[10px] font-bold leading-[0.88] uppercase bg-no-repeat bg-left bg-center !p-[5px] border-none absolute top-[15px] right-[15px] z-[3]"
+                  >
+                    <span class="variant_servings_price_new">Best Seller</span>
+                  </div>
+                  <div class="flex flex-col gap-[14px] w-full grow relative">
+                    <div class="pt-4 pb-[19px]">
+                      <div
+                        class="variant_servings_price_new inline-block px-4 py-2 mb-3 rounded-[24px] text-white text-[12px] font-bold leading-[1] uppercase w-auto max-w-fit text-left bg-[#960010]"
+                      >
+                        FEEL AMAZING TODAY
+                      </div>
+                      <h3
+                        class="text-[#50000b] text-[24px] font-medium leading-[1.08] ] tracking-[-0.48px] m-0 pt-0 max-[749px]:text-[20px] max-[749px]:tracking-[-0.4px]"
+                      >
+                        Daily Ultimate Essentials:
+                        <br />
+                        All-in-One Supplement
+                      </h3>
+                      <div class="pt-2">
+                        <p
+                          class="m-0 text-[#50000b] text-[14px] font-normal leading-[1.35] max-[749px]:text-[12px]"
+                        >
+                          Core nutrition with 92 nutrient-rich ingredients in
+                          one delicious drink.
+                        </p>
+                      </div>
+                      <div class="mt-1">
+                        <span
+                          class="text-[#50000b] text-[14px] font-bold leading-[1.35] max-[749px]:text-[12px]"
+                          >From $89
+                        </span>
+                      </div>
+
+                      <button
+                        class="min-h-[48px] p-[5px] rounded-[100px] bg-[#a40011] min-w-[272px] text-white text-[16px] font-[700] leading-[.32px] uppercase w-full min-[750px]:hidden mt-4"
+                      >
+                        <span>ADD TO CART</span>
+                      </button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div
+                class="w-[calc((100%/3)-16px)] product-hov cursor-pointer min-[750px]:max-[989px]:w-[calc((100%/2)-16px)] max-[749px]:w-full"
+              >
+                <div class="text-inherit h-full relative no-underline">
+                  <div class="">
+                    <div class="relative overflow-hidden rounded-[16px]">
+                      <img
+                        src="./asset/images/pr2.webp"
+                        alt=""
+                        class="main-img"
+                      />
+                      <img
+                        src="./asset/images/pr3.webp"
+                        alt=""
+                        class="img-hover"
+                      />
+
+                      <button
+                        class="btn-cart max-[749px]:hidden max-[749px]:hidden min-w-auto rounded-[100px] bg-[#fffc] border text-[13px] py-[11px] px-[24px] border-[#50000B] backdrop-blur-[4px] text-[#50000b] font-bold uppercase tracking-[0.32px] leading-[1.4] shadow-[0_8px_24px_#50000b33,_0_2px_8px_#0000001a]"
+                      >
+                        <span>ADD TO CART</span>
+                      </button>
+                    </div>
+                  </div>
+
+                  <div class="flex flex-col gap-[14px] w-full grow relative">
+                    <div class="pt-4 pb-[19px]">
+                      <div
+                        class="variant_servings_price_new inline-block px-4 py-2 mb-3 rounded-[24px] text-white text-[12px] font-bold leading-[1] uppercase w-auto max-w-fit text-left bg-[linear-gradient(90deg,#a40011,#ad020a,#b50503,#bd1105,#c51f08,#cd2d0a,#d43b0d,#dc4b0f,#e35b12,#ea6b16,#e87d22,#e78d2d)]"
+                      >
+                        STAY YOUNG TOMORROW
+                      </div>
+                      <h3
+                        class="text-[#50000b] text-[24px] font-medium leading-[1.08] ] tracking-[-0.48px] m-0 pt-0 max-[749px]:text-[20px] max-[749px]:tracking-[-0.4px]"
+                      >
+                        Daily Ultimate Longevity:
+                        <br />
+                        Healthy Aging
+                      </h3>
+                      <div class="pt-2">
+                        <p
+                          class="m-0 text-[#50000b] text-[14px] font-normal leading-[1.35] max-[749px]:text-[12px]"
+                        >
+                          The World’s first supplement scientifically formulated
+                          to support all 12 hallmarks of aging.
+                        </p>
+                      </div>
+                      <div class="mt-1">
+                        <span
+                          class="text-[#50000b] text-[14px] font-bold leading-[1.35] max-[749px]:text-[12px]"
+                          >From $119
+                        </span>
+                      </div>
+
+                      <button
+                        class="min-h-[48px] p-[5px] rounded-[100px] bg-[#a40011] min-w-[272px] text-white text-[16px] font-[700] leading-[.32px] uppercase w-full min-[750px]:hidden mt-4"
+                      >
+                        <span>ADD TO CART</span>
+                      </button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div
+                class="w-[calc((100%/3)-16px)] product-hov cursor-pointer min-[750px]:max-[989px]:w-[calc((100%/2)-16px)] max-[749px]:w-full"
+              >
+                <div class="text-inherit h-full relative no-underline">
+                  <div class="">
+                    <div class="relative overflow-hidden rounded-[16px]">
+                      <img
+                        src="./asset/images/pr4.jpg"
+                        alt=""
+                        class="main-img"
+                      />
+                      <img
+                        src="./asset/images/pr5.webp"
+                        alt=""
+                        class="img-hover"
+                      />
+
+                      <button
+                        class="btn-cart max-[749px]:hidden min-w-auto rounded-[100px] bg-[#fffc] border text-[13px] py-[11px] px-[24px] border-[#50000B] backdrop-blur-[4px] text-[#50000b] font-bold uppercase tracking-[0.32px] leading-[1.4] shadow-[0_8px_24px_#50000b33,_0_2px_8px_#0000001a]"
+                      >
+                        <span>ADD TO CART</span>
+                      </button>
+                    </div>
+                  </div>
+                  <div
+                    class="product-icon flex items-center justify-center text-center w-16 h-16 text-white text-[10px] font-bold leading-[0.88] uppercase bg-no-repeat bg-left bg-center !p-[5px] border-none absolute top-[15px] right-[15px] z-[3]"
+                  >
+                    <span class="variant_servings_price_new">Best Seller</span>
+                  </div>
+                  <div class="flex flex-col gap-[14px] w-full grow relative">
+                    <div class="pt-4 pb-[19px]">
+                      <div
+                        class="variant_servings_price_new inline-block px-4 py-2 mb-3 rounded-[24px] text-white text-[12px] font-bold leading-[1] uppercase w-auto max-w-fit text-left bg-[linear-gradient(90deg,#a40011,#ad020a,#b50503,#bd1105,#c51f08,#cd2d0a,#d43b0d,#dc4b0f,#e35b12,#ea6b16,#e87d22,#e78d2d)]"
+                      >
+                        The Beckham Stack:
+                      </div>
+                      <h3
+                        class="text-[#50000b] text-[24px] font-medium leading-[1.08] ] tracking-[-0.48px] m-0 pt-0 max-[749px]:text-[20px] max-[749px]:tracking-[-0.4px]"
+                      >
+                        Daily Ultimate Essentials:
+                        <br />
+                        Essentials + Longevity Set
+                      </h3>
+                      <div class="pt-2">
+                        <p
+                          class="m-0 text-[#50000b] text-[14px] font-normal leading-[1.35] max-[749px]:text-[12px]"
+                        >
+                          Daily Ultimate Essentials and Daily Ultimate
+                          Longevity.
+                        </p>
+                      </div>
+                      <div class="mt-1">
+                        <span
+                          class="text-[#50000b] text-[14px] font-bold leading-[1.35] max-[749px]:text-[12px]"
+                          >From $196
+                        </span>
+                      </div>
+
+                      <button
+                        class="min-h-[48px] p-[5px] rounded-[100px] bg-[#a40011] min-w-[272px] text-white text-[16px] font-[700] leading-[.32px] uppercase w-full min-[750px]:hidden mt-4"
+                      >
+                        <span>ADD TO CART</span>
+                      </button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <script src="./asset/js/js.js"></script>
     <script src="./asset/js/slideder.js"></script>
   </body>
