--- a/index.html
+++ b/index.html
@@ -4418,6 +4418,279 @@
         </div>
       </div>
     </div>
+    <div class="shopify-section">
+      <div class="bg-[#a40011]">
+        <div class="flex max-[749px]:flex-col-reverse">
+          <div
+            class="w-1/2 py-[40px] pr-[120px] pl-[56px] self-center h-full relative max-[749px]:w-full max-[749px]:pt-10 max-[749px]:px-5 max-[749px]:pb-[56px]"
+          >
+            <div
+              class="max-w-[79.414%] ml-auto mr-0 my-0 max-[749px]:max-w-full"
+            >
+              <div>
+                <h2
+                  class="text-[#ff9693] text-3xl text-[52px] font-[300] leading-[110%] tracking-[-1px] m-0 text-left max-[749px]:font-[400] tracking-[-0.8px] max-[749px]:text-[56px] max-[749px]:font-light max-[749px]:tracking-[-1.12px] max-[749px]:text-white"
+                >
+                  FAQs
+                </h2>
+              </div>
+              <div class="accordion">
+                <ul class="list-unstyled mt-2">
+                  <li class="toggle-block border-b border-[#fff]">
+                    <div
+                      class="question py-4 cursor-pointer px-6 pl-0 cursor-pointer"
+                    >
+                      <h4
+                        class="bg-span2 bg-no-repeat bg-right bg-center text-[#fff] text-base font-bold leading-[1.35]"
+                      >
+                        What is IM8?
+                      </h4>
+                    </div>
+                    <div class="answer">
+                      <div
+                        class="metafield-rich_text_field text-white text-[16px] font-normal leading-[1.35]"
+                      >
+                        <p class="pb-3">
+                          IM8 is the pinnacle of premium core nutrition, born
+                          from a collaboration between Prenetics (NASDAQ:PRE),
+                          David Beckham as a co-founding partner, and an elite
+                          team of scientists spanning space exploration, medical
+                          professionals, and academic excellence.
+                        </p>
+                        <p>
+                          Combining cutting-edge science with nature's most
+                          potent ingredients, IM8 delivers a holistic,
+                          science-backed approach to health, empowering you to
+                          live your most vibrant life.
+                        </p>
+                      </div>
+                    </div>
+                  </li>
+                  <li class="toggle-block border-b border-[#fff]">
+                    <div
+                      class="question py-4 cursor-pointer px-6 pl-0 cursor-pointer"
+                    >
+                      <h4
+                        class="bg-span2 bg-no-repeat bg-right bg-center text-[#fff] text-base font-bold leading-[1.35]"
+                      >
+                        What is David Beckham's involvement in IM8?
+                      </h4>
+                    </div>
+                    <div class="answer">
+                      <div
+                        class="metafield-rich_text_field text-white text-[16px] font-normal leading-[1.35]"
+                      >
+                        <p class="pb-3">
+                          David Beckham is a co-founding partner of IM8, driven
+                          by his commitment to simplifying wellness. After years
+                          of working with top medical professionals and
+                          nutrition experts, David wanted to make core nutrition
+                          more accessible. In collaboration with the Prenetics
+                          team and world-class scientists, IM8 was developed to
+                          deliver essential nutrients in a simple and effective
+                          way. David's vision for IM8 is to provide
+                          best-in-class core nutrition for today and tomorrow,
+                          making it easy for everyone to prioritize their
+                          health.
+                        </p>
+                      </div>
+                    </div>
+                  </li>
+                  <li class="toggle-block border-b border-[#fff]">
+                    <div
+                      class="question py-4 cursor-pointer px-6 pl-0 cursor-pointer"
+                    >
+                      <h4
+                        class="bg-span2 bg-no-repeat bg-right bg-center text-[#fff] text-base font-bold leading-[1.35]"
+                      >
+                        Who is on the IM8 Scientific Advisory Board?
+                      </h4>
+                    </div>
+                    <div class="answer">
+                      <div
+                        class="metafield-rich_text_field text-white text-[16px] font-normal leading-[1.35]"
+                      >
+                        <p class="pb-3">
+                          The IM8 Scientific Advisory Board comprises
+                          distinguished professionals with impressive
+                          backgrounds:
+                        </p>
+                        <p class="pb-3">
+                          Dr. Dawn Mussallem, a renowned oncologist at the Mayo
+                          Clinic, brings her expertise in integrative and
+                          lifestyle medicine.
+                        </p>
+                        <p class="pb-3">
+                          Dr. Dawn Mussallem, a renowned oncologist at the Mayo
+                          Clinic, brings her expertise in integrative and
+                          lifestyle medicine.
+                        </p>
+
+                        <p class="pb-3">
+                          Dr. James L. Green, the former Chief Scientist at
+                          NASA, has an extensive career in space and planetary
+                          science.
+                        </p>
+                        <p class="pb-3">
+                          Dr. David Katz,is a globally recognized preventive
+                          medicine specialist and the founding director of the
+                          Yale-Griffin Prevention Research Center.
+                        </p>
+                        <p class="pb-3">
+                          Prof. Suzanne Devkota serves as an Associate Professor
+                          and Director of the Microbiome Research Institute at
+                          Cedars-Sinai Medical Center, specializing in gut
+                          health and microbiome research.&nbsp;
+                        </p>
+                        <p class="pb-3">
+                          Dr. James DiNicolantonio is a cardiovascular research
+                          scientist and Doctor of Pharmacy, known for his
+                          influential work in the field of heart health and
+                          evidence-based nutrition.
+                        </p>
+                        <p class="pb-3">
+                          Prof. Ock Chun is a distinguished expert in
+                          nutritional sciences at University of Connecticut with
+                          over 25 years of experience in the field.
+                        </p>
+                        <p>
+                          Their combined academic credentials and scientific
+                          expertise form the backbone of IM8's innovation and
+                          product development.
+                        </p>
+                      </div>
+                    </div>
+                  </li>
+                  <li class="toggle-block border-b border-[#fff]">
+                    <div
+                      class="question py-4 cursor-pointer px-6 pl-0 cursor-pointer"
+                    >
+                      <h4
+                        class="bg-span2 bg-no-repeat bg-right bg-center text-[#fff] text-base font-bold leading-[1.35]"
+                      >
+                        What are the main benefits of IM8 Daily Essentials +
+                        Hydration?
+                      </h4>
+                    </div>
+                    <div class="answer">
+                      <div
+                        class="metafield-rich_text_field text-white text-[16px] font-normal leading-[1.35]"
+                      >
+                        <p class="pb-3">
+                          IM8 Daily Essentials is your all-in-one solution,
+                          replacing the need for 16 supplements, targeting eight
+                          key areas of health: Energy, Immunity, Cognitive
+                          Function, Digestion, Cardiovascular Health, Hydration,
+                          Nourishment, and Cellular Renewal. With 92 carefully
+                          selected premium ingredients, including CoQ10 (100mg)
+                          for heart health and MSM (1,000mg) for joint support,
+                          IM8 Daily Essentials makes it easier to live a
+                          healthier, more vibrant life. Plus, it tastes great,
+                          so it's something you'll look forward to each day.
+                        </p>
+                      </div>
+                    </div>
+                  </li>
+
+                  <li class="toggle-block border-b border-[#fff]">
+                    <div
+                      class="question py-4 cursor-pointer px-6 pl-0 cursor-pointer"
+                    >
+                      <h4
+                        class="bg-span2 bg-no-repeat bg-right bg-center text-[#fff] text-base font-bold leading-[1.35]"
+                      >
+                        What does IM8 Daily Ultimate Essentials taste like?
+                      </h4>
+                    </div>
+                    <div class="answer">
+                      <div
+                        class="metafield-rich_text_field text-white text-[16px] font-normal leading-[1.35]"
+                      >
+                        <p class="pb-3">
+                          We've worked hard to make sure IM8 Daily Essentials is
+                          something you enjoy drinking every day. Experience a
+                          delightful blend of flavors with earthy undertones,
+                          complemented by a subtle tartness and a hint of
+                          chocolate. The flavor then culminates in a smooth
+                          finish of acai and mixed berries.
+                        </p>
+                        <p class="pb-3">
+                          For a more robust flavor, use less water, or add more
+                          water for a delicate, lighter taste. This balance of
+                          flavors makes IM8 Daily Essentials both refreshing and
+                          satisfying, turning your daily supplement into an
+                          enjoyable part of your routine.
+                        </p>
+                      </div>
+                    </div>
+                  </li>
+                  <li class="toggle-block border-b border-[#fff]">
+                    <div
+                      class="question py-4 cursor-pointer px-6 pl-0 cursor-pointer"
+                    >
+                      <h4
+                        class="bg-span2 bg-no-repeat bg-right bg-center text-[#fff] text-base font-bold leading-[1.35]"
+                      >
+                        What countries do you currently ship to?
+                      </h4>
+                    </div>
+                    <div class="answer">
+                      <div
+                        class="metafield-rich_text_field text-white text-[16px] font-normal leading-[1.35]"
+                      >
+                        <p class="pb-3">
+                          What countries do you currently ship to? IM8 currently
+                          ships to 31 countries (with free shipping for all
+                          subscriptions to the United States, United Kingdom,
+                          Canada, Singapore and Hong Kong), including but not
+                          limited to the United States, Canada, United Kingdom,
+                          Australia, and many countries across Europe, Asia, and
+                          South America. The full list of countries we ship to
+                          can be found <u>here</u>.
+                        </p>
+                        <p class="pb-3">
+                          Please note that international shipping rates vary by
+                          country and will be reflected during checkout. We do
+                          not add any margins to the shipping cost—what you see
+                          is the direct charge from our shipping provider.
+                        </p>
+                      </div>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+              <div>
+                <div class="pt-6">
+                  <button
+                    class="rounded-[100px] bg-[#50000b] py-[13px] px-[17px] min-w-[264px] text-white text-[16px] font-bold leading-[22px] tracking-[0.32px] uppercase max-[749px]:min-w-full"
+                  >
+                    Explore All Faqs
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="w-1/2 max-[749px]:w-full">
+            <div class="h-full relative">
+              <div
+                class="pb-[89.307%] min-h-[872px] relative w-full h-full max-[749px]:pb-[74.67%] max-[749px]:min-h-[initial]"
+              >
+                <img
+                  src="./asset/images/girl.webp"
+                  alt=""
+                  class="absolute inset-0 w-full h-full object-cover object-left max-[749px]:hidden"
+                />
+                <img
+                  src="./asset/images/woman.webp"
+                  alt=""
+                  class="absolute inset-0 w-full h-full object-cover object-left min-[750px]:hidden"
+                />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <script src="./asset/js/js.js"></script>
     <script src="./asset/js/slideder.js"></script>
   </body>
