--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>
+      IM8 Daily Ultimate Essentials: 92 Nutrients in One Delicious Drink
+    </title>
+
+    <link rel="icon" type="image/png" href="./asset/images/whole_badge.svg" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
@@ -35,13 +39,19 @@
   <body>
     <div id="shopify_header" class="header-section">
       <div
-        class="header-bar bg-[#a40011] text-white no-underline block cursor-pointer pt-[8px] pb-[9px] px-0 relative z-20"
+        class="header-bar bg-[#a40011] text-white no-underline block cursor-pointer pt-[8px] pb-[9px] px-0 relative z-20 relative"
       >
         <div
           class="page-width max-[749px]:px-[20px] max-w-[1500px] min-h-[22px] text-item text-[14px] font-bold not-italic leading-[19px] tracking-[0.28px] h-[19px] uppercase text-center mx-auto max-[739px]:h-full max-[739px]:flex max-[739px]:flex-col"
         >
           <strong>2026 STARTS NOW: </strong>
           <span class="mobile-break"> 35% OFF — Feel Like Yourself Again</span>
+        </div>
+        <div
+          class="flex items-center absolute top-[8px] right-[65px] max-[749px]:hidden"
+        >
+          <span class="text-[14px] font-extrabold">USD</span>
+          <img src="./asset/images/arrow-down-w.svg" alt="" />
         </div>
       </div>
 
@@ -5025,7 +5035,6 @@
         </div>
       </div>
     </div>
-
     <div class="shopify-section">
       <div
         class="bg-st2 min-[990px]:pt-[120px] min-[990px]:pb-[160px] bg-[linear-gradient(180deg,rgba(250,247,238,0.92)_0%,rgba(250,247,238,0.75)_10%,rgba(250,247,238,0.65)_20%,rgba(250,247,238,0.5)_30%,rgba(250,247,238,0.3)_40%,rgba(248,244,232,0.15)_50%,rgba(250,247,238,0.05)_60%,transparent_70%,transparent_100%)]"
@@ -9641,6 +9650,80 @@
             </div>
           </div>
         </div>
+      </div>
+    </div>
+    <div
+      class="fixed bottom-0 left-0 w-full flex justify-center h-[90px] z-[2] text-[#333] overflow-visible border-t border-[rgba(80,0,11,0.12)] bg-[linear-gradient(135deg,rgba(245,234,234,0.95)_0%,rgba(255,255,255,0.98)_100%)] backdrop-blur-[20px] [contain:layout_style] transition-[transform,opacity] duration-[500ms,300ms] ease-[cubic-bezier(0.16,1,0.3,1)] max-[768px]:h-[70px] max-[768px]:px-[16px]"
+    >
+      <div
+        class="mx-auto max-w-[1500px] w-full px-[1.5rem] min-[750px]:px-[50px] h-full flex items-center justify-between max-[768px]:px-0"
+      >
+        <div
+          class="flex items-center gap-[18px] overflow-visible h-full max-[768px]:hidden"
+        >
+          <div
+            class="h-full flex overflow-hidden rounded-[12px] bg-[linear-gradient(145deg,#ffffff,#f8f8f8)] shadow-[0_4px_16px_rgba(80,0,11,0.08),0_2px_8px_rgba(0,0,0,0.04),inset_0_1px_0_rgba(255,255,255,0.8)] transition-all duration-[400ms] ease-[cubic-bezier(0.4,0,0.2,1)] translate-z-0"
+          >
+            <img src="./asset/images/prd1.webp" alt="" />
+          </div>
+          <div class="font-semibold text-[#50000b] text-[16px] leading-[1.3]">
+            Daily Ultimate Essentials: All-in-One Supplement
+
+            <div
+              class="product-title__variant"
+              data-title="Daily Ultimate Essentials: All-in-One Supplement"
+            >
+              (Forever Jar)
+            </div>
+          </div>
+        </div>
+        <div
+          class="flex items-center gap-[12px] overflow-visible relative max-[989px]:m-0 max-[989px]:w-full max-[989px]:grid max-[989px]:grid-cols-[2fr_1fr] max-[989px]:gap-[12px] max-[989px]:items-center max-[989px]:overflow-visible max-[768px]:w-full"
+        >
+          <div
+            class="relative w-[280px] text-left [contain:none] overflow-visible max-[768px]:w-full"
+          >
+            <div
+              class="flex flex-col justify-center min-h-[42px] cursor-pointer rounded-[20px] border border-[#50000b] bg-[#f9f4f4] px-[30px] py-[8px] text-[#50000b] font-bold"
+            >
+              <div
+                class="dropdown-selected__title text-[14px] max-[768px]:text-[12px] leading-[15.6px]"
+              >
+                90-Day Supply (Save 30%)
+              </div>
+              <div
+                class="text-[12px] text-[rgba(80,0,11,0.8)] font-medium tracking-[0.01em] [text-rendering:optimizeLegibility]"
+              >
+                $2.61 USD / serving
+              </div>
+            </div>
+            <span
+              class="dropdown-arrow absolute right-[20px] top-[18px] w-0 h-0 border-l-[6px] border-l-transparent border-r-[6px] border-r-transparent border-t-[6px] border-t-[#50000b] transition-transform duration-300 ease-in-out"
+            ></span>
+          </div>
+          <div
+            class="relative overflow-hidden cursor-pointer w-[300px] min-w-[300px] max-[768px]:w-auto max-[768px]:min-w-auto h-[50px] px-[40px] py-[15px] rounded-[24px] bg-[linear-gradient(135deg,#50000b_0%,#6b0010_100%)] text-white font-semibold uppercase whitespace-nowrap border-0 transition-all duration-300 ease-[cubic-bezier(0.4,0,0.2,1)] translate-z-0 [contain:layout] max-[768px]:w-full max-[768px]:p-[10px] max-[768px]:rounded-[20px] max-[768px]:h-[45px]"
+          >
+            <span
+              class="text-desktop max-[749px]:hidden text-[13.333px] text-center flex items-center justify-center"
+              >Add to cart
+              <span class="button-text-price"> - $78.33 USD/mo</span></span
+            >
+            <span
+              class="text-mobile min-[750px]:hidden flex items-center justify-center"
+              >Add</span
+            >
+          </div>
+        </div>
+      </div>
+    </div>
+    <div
+      class="fixed right-5 w-20 h-[74px] bottom-[75px] max-[768px]:bottom-[70px] z-20"
+    >
+      <div
+        class="inline-flex items-center relative cursor-pointer h-[60px] max-w-[60px] m-[7px_10px] p-[14px] rounded-[100px] border-[3px] border-transparent bg-[rgb(164,0,17)] shadow-[0_2px_4px_rgba(22,22,22,0.16)] will-change-transform backface-hidden [transform-style:preserve-3d] scale-100 transition-transform duration-200 ease-out hover:scale-105 active:scale-95 max-[768px]:h-[50px] max-[768px]:max-w-[50px] max-[768px]:p-3"
+      >
+        <img src="./asset/images/mess.svg" alt="" class="w-10 h-10" />
       </div>
     </div>
     <script src="./asset/js/js.js"></script>
